plugins {
	// 여기서는 플러그인을 선언만 하고, 각 모듈에 적용하지 않도록 `apply false`를 사용합니다.
	id 'java'
	id 'org.springframework.boot' version '3.5.4' apply false
	id 'io.spring.dependency-management' version '1.1.7' apply false
}

// 모든 하위 프로젝트(admin, common 등)에 이 설정을 적용합니다.
subprojects {
	// 각 모듈에 플러그인을 적용합니다.
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	group = 'com.toyProject'
	version = '0.0.1-SNAPSHOT'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(21)
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {

		implementation 'org.springframework.boot:spring-boot-starter-validation'

		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'

		implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
	}
}

project(':admin') {
	dependencies {
		implementation project(':common')
	}
}

project(':batch') {
	dependencies {
		implementation project(':common')
	}
}